Use generics, use renamed fields, fix unclosed streams.